# django-plugin-django-header

./: README.md  pyproject.toml
django_plugin_django_header/: __init__.py  middleware.py
tests/: test_django_plugin_django_header.py
tests/test_project/: settings.py  urls.py
